--- a/theme/assets/stylesheets/style.css
+++ b/theme/assets/stylesheets/style.css
@@ -272,6 +272,7 @@ textarea::-webkit-input-placeholder { color: #ccc;}
 .cm-seeimgbox .botdo{ display: none; position: absolute; right: 10px; bottom:10px; background: rgba(100,100,100,.5); color: #fff;  border-radius: 2px; padding:0 8px; font-size: 12px; white-space: nowrap; line-height: 30px; z-index: 3;}
 .cm-seeimgbox .num{position: absolute; right: 0; top: 0; z-index: 5;background: rgba(100,100,100,.4); color: #eee; padding: 0 5px 0 12px; line-height: 24px; border-radius: 12px 0 0 12px;}
 .cm-seeimgbox .simgr{  position: absolute; left: 50%; top: 50%; max-width: 100%; max-height: 100%; transform: translate(-50%,-50%); -webkit-transform: translate(-50%,-50%);}
+.cm-seeimgbox .sitx{ position: absolute; left: 0; bottom: 0; z-index: 2; width: 100%; padding:10px 14px; background: rgba(0,0,0,.6); color: #fff; font-size: 12px; line-height: 18px;}
 
 .cm-clipimage{ position: fixed; left: 0; top: 0; height: 0; width: 100%; overflow: hidden; background: #000;}
 .cm-clipimage-ac{ height: 100%; opacity: 0;  -webkit-transform: scale(.7,.7); transform: scale(.7,.7); -webkit-transition: all .2s; transition: all .2s;}
