--- a/shopdemo/src/assets/css/base.less
+++ b/shopdemo/src/assets/css/base.less
@@ -6,7 +6,7 @@ a{ text-decoration:none; color: #222;}
 ul{ list-style: none; }
 dl,ul,p{ -webkit-margin-before:0em; -webkit-margin-after:0em;}
 input,select,textarea{-webkit-appearance: none; font-size: 14px; outline: none; color: #333; font-family:Helvetica, "Helvetica Neue",  STHeiTi, sans-serif;}
-body{ font-size: 14px; line-height: 24px; color: #333; background: #f6f6f6; }
+body{ font-size: .14rem; line-height: .24rem; color: #333; background: #f6f6f6; }
 html,body{ height: 100%; }
 .alic{ text-align: center;}
 .alir{ text-align: right;}
@@ -41,7 +41,8 @@ textarea::-webkit-input-placeholder { color: #ccc;}
 .cm-pop-active .cm-pop-top-cont{opacity: 1;transform:translateZ(0) translateY(0); -webkit-transform:translateZ(0) translateY(0);}
 .cm-pop-right-cont{position: absolute; right: 0; top: 0; border-radius: 0; height: 100%; transform:translateZ(0) translateX(101%); -webkit-transform:translateZ(0) translateX(101%);}
 .cm-pop-active .cm-pop-right-cont{opacity: 1;transform:translateZ(0) translateX(0); -webkit-transform:translateZ(0) translateX(0);}
-.cm-pop-close{position: absolute; right: .1rem; top: -.44rem; width: .34rem; height: .34rem;;}
+.cm-pop-close{position: absolute; right: .1rem; top: -.44rem; width: .34rem; height: .34rem;}
+.cm-pop-closea{position: absolute; left: 50%; bottom: -.84rem; width: .46rem; height: .46rem; margin-left: -.23rem;}
 
 .cm-botnav{
     height:.5rem;
@@ -81,7 +82,7 @@ textarea::-webkit-input-placeholder { color: #ccc;}
         .tl-item:nth-child(3n){ margin-right: 0;}
         .tl-imgo{ border-radius: .05rem; overflow: hidden;}
         .tl-img{ display: block; height: 1.08rem; width: 1.08rem;}
-        .tl-info{ padding: .1rem 0 0; border: none;}
+        .tl-info{ padding: .05rem 0 0; border: none;}
     }
 }
 
