--- a/shopdemo/src/assets/css/base.css
+++ b/shopdemo/src/assets/css/base.css
@@ -58,10 +58,6 @@ body {
   color: #333;
   background: #f6f6f6;
 }
-html,
-body {
-  height: 100%;
-}
 .alic {
   text-align: center;
 }
@@ -411,6 +407,15 @@ textarea::-webkit-input-placeholder {
   height: 1.3rem;
   width: 1.3rem;
 }
+.cm-vprolist .pl-btime {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  padding: 0 .05rem;
+  background: #ff6521;
+  color: #fff;
+}
 .cm-vprolist .pl-info {
   position: relative;
   float: right;
@@ -467,4 +472,30 @@ textarea::-webkit-input-placeholder {
 }
 .cm-vprolist .pl-btna {
   background: #ffb821;
+}
+.cm-vprolist .pl-btnb {
+  background: #c5c5c5;
+}
+.cm-vprolist .pl-cover {
+  position: absolute;
+  z-index: 2;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  background: rgba(255, 255, 255, 0.7);
+}
+.cm-vprolist .pl-cover-tx {
+  position: absolute;
+  z-index: 2;
+  left: .15rem;
+  top: .15rem;
+  height: 1rem;
+  width: 1rem;
+  background: rgba(0, 0, 0, 0.4);
+  border-radius: 50%;
+  line-height: 1rem;
+  font-size: .24rem;
+  text-align: center;
+  color: #fff;
 }
