--- a/shopdemo/src/assets/css/base.less
+++ b/shopdemo/src/assets/css/base.less
@@ -118,3 +118,8 @@ textarea::-webkit-input-placeholder { color: #ccc;}
     .oar-t{ top: -.04rem; border-bottom-color: #fff;}
     .oar-b{ bottom: -.04rem; border-top-color: #fff;}
 }
+.cm-swipecell{
+    position: relative; overflow: hidden;
+    .right{ position: absolute; right: 0; top: 0; height: 100%; display: flex; display: -webkit-flex; background: red;;}
+    .wrap{ position: relative; z-index: 2; background: #fff;}
+}
